version/0.20/_sources/api/solver/_autosummary/ansys.fluent.core.solver.flobject.RealVector.rst.txt
ansys.fluent.core.solver.flobject.RealVector
============================================

.. currentmodule:: ansys.fluent.core.solver.flobject

.. autoclass:: RealVector

   

   
   .. rubric:: Methods

   .. autosummary::
      :toctree:
   
      ~RealVector.__init__
      ~RealVector.after_execute
      ~RealVector.before_execute
      ~RealVector.default_value
      ~RealVector.find_object
      ~RealVector.get_attr
      ~RealVector.get_attrs
      ~RealVector.get_state
      ~RealVector.is_active
      ~RealVector.is_read_only
      ~RealVector.max
      ~RealVector.min
      ~RealVector.print_state
      ~RealVector.set_flproxy
      ~RealVector.set_state
      ~RealVector.state_with_units
      ~RealVector.to_python_keys
      ~RealVector.to_scheme_keys
   
   

   
   
   .. rubric:: Attributes

   .. autosummary::
   
      ~RealVector.file_transfer_service
      ~RealVector.flproxy
      ~RealVector.fluent_name
      ~RealVector.obj_name
      ~RealVector.parent
      ~RealVector.path
      ~RealVector.python_name
      ~RealVector.python_path
   
   